--- a/adm/style/header.html
+++ b/adm/style/header.html
@@ -5,7 +5,6 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>{if="!empty($title)"}{$title|display} - {/if}{$lang_menu_top.admin_cp}</title>
-<meta name="description" content="Prototype de page html contenant un design évolutif et adaptable aux différentes machines." />
 <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css">
 <link rel="stylesheet" href="css/jquery-ui.min.css" type="text/css">
 <link rel="stylesheet" href="css/jquery.uploadifive.css" type="text/css">
@@ -42,7 +41,7 @@
 			<li><a href="adm/categories.php" tabindex="-1">{$lang_menu_top.forums}</a></li>
 			<li><a href="adm/users.php" tabindex="-1">{$lang_menu_top.users}</a></li>
 			<li><a href="adm/pictures.php" tabindex="-1">{$lang_menu_top.images}</a></li>
-			<li><a href="adm/system.php" tabindex="-1">{$lang_menu_top.system}</a></li>
+			<li><a href="adm/configuration.php" tabindex="-1">{$lang_menu_top.configuration}</a></li>
 		  </ul>
 		  {/if}
 		  <ul class="nav navbar-nav navbar-right">
